--- a/index.html
+++ b/index.html
@@ -15,31 +15,7 @@
           <h2>Legislator Information</h2>
         </div>
         <div class="all-legislators row">
-          <div class="legislator col-xs-6 col-md-4 col-lg-4">
-            <div class="legis-block example thumbnail">
-              <h3>Bob Executive</h3>
-              <h4>"Which way is business?"</h4>
-              <ul>
-                <li>stuff</li>
-                <li>things</li>
-                <li>spiel</li>
-              </ul>
-              <p>Still stuck in Fort Worth.</p>
-            </div>
-          </div>
-          <div class="legislator col-xs-6 col-md-4 col-lg-4">
-            <div class="legis-block example thumbnail">
-              <h3>Publilius Syrus</h3>
-              <h4>Writer of moral sayings</h4>
-              <ol>
-                <li>As men, we are all equal in the presence of death.</li>
-                <li>The evil you do to others you may expect in return. </li>
-                <li>Allay the anger of your friend by kindness.</li>
-                <li>To dispute with a drunkard is to debate with an empty house.</li>
-              </ol>
-              <p>Judex damnatur cum nocens absolvitur</p>
-            </div>
-          </div>
+          <!-- Generated profiles go here -->
         </div>
       </div>
       <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
